--- a/css/custom.css
+++ b/css/custom.css
@@ -172,6 +172,7 @@ button {
 .services .card .card-image img {
     display: block;
     width: 100%;
+    height: 65%;
 }
 
 .services .card .card-image {
