--- a/css/index.css
+++ b/css/index.css
@@ -1,73 +1,14 @@
-html {
-    overflow: scroll;
-    overflow-x: hidden;
-}
-
-h1,
-h2,
-h3,
-p,
-span,
-a,
-button {
-    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif !important;
-    font-weight: bold !important;
-}
-
-
-/*NAVBAR*/
-
-.navbar img {
-    height: 10%;
-}
-
-.scrolled {
-    background: black;
-    transition: .3s all ease-in;
-}
-
-
-/*Sections*/
-
-.section {
-    position: relative;
-    min-height: 100%;
-    margin-left: -15px;
-    margin-right: -15px;
-}
-
 .main {
     background: url('../img/ca.png') center;
     background-size: cover;
-}
-
-.main:before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
-.services {
-    background: black;
-    padding-top: 80px;
-    padding-left: 30px;
-    padding-right: 30px;
 }
 
 
 /* MAIN SECTION */
 
 .holder {
-    margin: 0 auto;
-    position: relative;
     min-height: 100%;
     max-width: 75%;
-    box-sizing: border-box;
 }
 
 #homeheader {
@@ -77,291 +18,42 @@ button {
     padding-left: 15px;
 }
 
-.homesvg {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    /* top: 50%; */
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
+
+/* Testimonials */
+
+.testimonial {
+    margin-right: 23%;
+    margin-left: 23%;
 }
 
-.homesvg img {
-    /* width: 80%; */
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.testimonial .avatar img {
+    -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+    max-width: 170px;
+    display: unset !important;
 }
 
-#homeheader h1 span {
-    color: #ffa10c;
+.img-fluid {
+    max-width: 100%;
+    height: auto;
 }
 
-
-/* SCROLL BAR*/
-
-::-webkit-scrollbar {
-    width: 5px;
-    background: #63584b;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #ffa10c;
-}
-
-.m-auto {
-    margin: auto;
-}
-
-
-/**What we do*/
-
-.services h3 {
-    font-size: 1.5rem;
-}
-
-.services .section-title {
-    text-align: center;
-    color: azure;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-}
-
-.services .card {
-    /* padding: 1rem!important; */
-    border: none;
-    margin-bottom: 1rem;
-    -webkit-transition: .2s all ease;
-    -moz-transition: .2s all ease;
-    transition: .2s all ease;
-    background-color: #dedede40;
-    color: azure;
-    min-height: 340px;
-}
-
-.services .card:hover {
-    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    /* transform: scale(1.1); */
-}
-
-.services .card:hover .card-image img {
-    transform: scale(1.1);
-}
-
-.services .card .card-block {
-    /* padding-left: 50px; */
-    margin: 20px;
-    position: relative;
-}
-
-.services .card .card-block a {
-    color: #ffa10c !important;
-    font-weight: 700;
-    text-decoration: none;
-}
-
-.services .card .card-block a i {
-    display: none;
-}
-
-.services .card:hover .card-block a i {
-    display: inline-block;
-    font-weight: 700;
-}
-
-.services .card .card-image img {
-    display: block;
-    width: 100%;
-    height: 65%;
-}
-
-.services .card .card-image {
-    overflow: hidden;
-}
-
-.services .rot {
-    position: absolute;
-    left: 88%;
-    top: -50%;
-    background: black;
-    padding: 15px;
-    border-radius: 27px;
-    cursor: pointer;
-}
-
-.services .rot:hover {
-    background: grey;
-}
-
-.services .clrot {
-    position: absolute;
-    left: 94%;
-    top: 0%;
-    cursor: pointer;
-}
-
-.rotate {
-    -webkit-transition: -webkit-transform 0.7s;
-    transition: transform 0.7s;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transform: rotateY( 180deg);
-    transform: rotateY( 180deg);
-}
-
-.front,
-.back {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.front {
-    z-index: 1;
-}
-
-.back {
-    -webkit-transform: rotateY( 180deg);
-    transform: rotateY( 180deg);
-}
-
-.front,
-.back {
-    box-shadow: 0 1px 6px 0;
-    position: absolute;
-    width: 100%;
-    top: 0;
-    bottom: 0;
-}
-
-
-/*footer*/
-
-.dark-footer {
+.testi-container {
     background: black;
 }
 
-.dark-footer p {
-    line-height: 1.7rem;
-}
-
-.dark-footer a:hover {
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.dark-footer a {
-    color: #757371;
-}
-
-.flex-center {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
-footer hr {
+.testi-container hr {
     border-top: 1px solid rgba(255, 255, 255, 0.38);
 }
 
-footer strong {
+.testimonial p {
+    color: #faebd7e3;
+}
+
+.testimonial h4 {
+    color: #ffa10c;
+}
+
+.testimonial h6 {
     color: #f6a13c70;
 }
-
-
-/*BREAK POINTS-*/
-
-
-/* Extra small devices (phones, 600px and down) */
-
-@media only screen and (max-width: 600px) {
-    #homeheader h1 {
-        font-size: 2rem;
-    }
-    #homeheader h2 {
-        font-size: 1.3rem;
-    }
-    #homeheader {
-        left: 50%;
-        border-left: 7px solid;
-    }
-}
-
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-
-@media only screen and (min-width: 600px) {
-    #homeheader h1 {
-        font-size: 2rem;
-    }
-    #homeheader h2 {
-        font-size: 1.3rem;
-    }
-    #homeheader {
-        left: 48%;
-        border-left: 7px solid;
-    }
-}
-
-
-/* Medium devices (landscape tablets, 768px and up) */
-
-@media only screen and (min-width: 768px) {
-    #homeheader h1 {
-        font-size: 2rem;
-    }
-    #homeheader h2 {
-        font-size: 1.3rem;
-    }
-    #homeheader {
-        left: 45%;
-        border-left: 7px solid;
-    }
-}
-
-
-/* Large devices (laptops/desktops, 992px and up) */
-
-@media only screen and (min-width: 992px) {
-    #homeheader h1 {
-        font-size: 3rem;
-    }
-    #homeheader h2 {
-        font-size: 1.7rem;
-    }
-    #homeheader {
-        left: 40%;
-        border-left: 10px solid;
-    }
-}
-
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-
-@media only screen and (min-width: 1200px) {
-    #homeheader h1 {
-        font-size: 4.3rem;
-    }
-    #homeheader h2 {
-        font-size: 2rem;
-    }
-    #homeheader {
-        left: 40%;
-        border-left: 10px solid;
-    }
-}
-
-
-/* TODO: Fix nav bar responsive view with media query */
