--- a/css/index.css
+++ b/css/index.css
@@ -57,3 +57,40 @@
 .testimonial h6 {
     color: #f6a13c70;
 }
+
+
+/**/
+
+.grid_body {
+    padding: 100px;
+    /* background: rgba(255, 255, 255, 0.69); */
+}
+
+.grid_inner {
+    position: absolute;
+    left: 49%;
+    top: 50%;
+    width: 70%;
+    height: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.69);
+    /* outline: 1px dashed #5d4f4f; */
+    outline-offset: -10px;
+}
+
+.grid_inner>p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+}
+
+.grid_img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
